# DailyStartUpApp

./: .env.vault  .gitignore  Makefile  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  requirements.txt
dailystartup/: dummy-data.json  manage.py
dailystartup/agenda/: admin.py  forms.py  models.py  urls.py  views.py
dailystartup/agenda/migrations/: 0001_initial.py  0002_item_next_task_due_date_alter_agenda_date.py
dailystartup/api/: serializers.py  urls.py  views.py
dailystartup/authentication/: backend.py  forms.py  urls.py  views.py
dailystartup/dailystartup/: asgi.py  settings.py  urls.py  wsgi.py
dailystartup/static/css/: style.css
dailystartup/static/js/: main.js
dailystartup/static/semantic-themed/: semantic.min.js
dailystartup/templates/: download.html  index.html  item-log.html  support_mail.html
dailystartup/templates/allauth/: login.html  password_reset_done.html  password_reset_form.html
dailystartup/templates/allauth/account/: email.html  email_change.html  login.html  logout.html  reauthenticate.html  signup.html  signup_closed.html  (+2 more)
dailystartup/templates/includes/: calls_list.html  docs_list.html  focus_list.html  ifeat_list.html  internal_list.html  item-log.html  misc_list.html  modals.html  monitor_list.html  navbar.html  needs_list.html  review_list.html  sidebar.html  stats.html  updates_list.html  wins_oops.html  your-tasks.html
dailystartup/templates/layouts/: base-layout.html
dailystartup/templates/registration/: login.html  password_reset_done.html  password_reset_form.html
(+14 files in other folders)
